--- a/Labfiles/01-analyze-text/Python/text-analysis/.env
+++ b/Labfiles/01-analyze-text/Python/text-analysis/.env
@@ -1,2 +1,3 @@
-AI_SERVICE_ENDPOINT=your_cognitive_services_endpoint
-AI_SERVICE_KEY=your_cognitive_services_key
+# 採用 Azure AI Service 的資訊
+AI_SERVICE_ENDPOINT=""
+AI_SERVICE_KEY=""
