--- a/Labfiles/02-qna/Python/qna-app/.env
+++ b/Labfiles/02-qna/Python/qna-app/.env
@@ -1,4 +1,4 @@
-AI_SERVICE_ENDPOINT=YOUR_AI_SERVICES_ENDPOINT
-AI_SERVICE_KEY=YOUR_AI_SERVICES_KEY
-QA_PROJECT_NAME=LearnFAQ
-QA_DEPLOYMENT_NAME=production
+AI_SERVICE_ENDPOINT=""
+AI_SERVICE_KEY=""
+QA_PROJECT_NAME=""
+QA_DEPLOYMENT_NAME=""
